@@ -1,3 +1,8 @@
+2010-11-24  Nathan Froyd  <froydnj@codesourcery.com>
+
+	* dconfig.h (LIBGCC2_FLOAT_WORDS_BIG_ENDIAN): Delete.
+	(WORDS_BIG_ENDIAN): Define based on value of __FLOAT_WORD_ORDER__.
+
 2010-10-23  Nathan Froyd  <froydnj@codesourcery.com>
 
 	* dconfig.h (LIBGCC2_WORDS_BIG_ENDIAN): Delete.
